# ISchool

./: .gitattributes  .gitignore  GUION_DEMO.md  PRD.md  PROYECTO.md  README.md
agentes/: tutor-socratico.md
app/: page.tsx
app/api/elevenlabs-token/: route.ts
components/: AvatarStage.tsx  TutorSession.tsx  VoiceSession.tsx
db/migrations/: 0001_init.sql
db/seed/: math_sample.jsonl
demo-mates/: README.md  gen-audio.mjs
docs/: plan-matematicas-rag.md
lib/: careers.ts  characters.ts  elevenlabs.ts  profile.ts
quriuos/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
quriuos/agentes/: orientador.md  orquestador.md
quriuos/app/: globals.css  layout.tsx  page.tsx
quriuos/app/coach/: page.tsx
quriuos/app/personajes/: page.tsx
quriuos/app/tutor/: page.tsx
quriuos/app/vocacional/: page.tsx
quriuos/components/: AppShell.tsx  CharacterCard.tsx  ParticleField.tsx  ProfileSummary.tsx  VoiceSession.tsx  VoiceVisualizer.tsx
quriuos/demo-mates/: mates-mvp.html
quriuos/lib/: profile.ts  tutors.ts
quriuos/patches/: @elevenlabs+client+1.9.0.patch
quriuos/public/: manifest.json
quriuos/scripts/: configure-orchestrator.mjs
quriuos/types/: elevenlabs.d.ts
scripts/: create-agents.mjs
services/: .env.example  README.md
services/ingestion/: pyproject.toml
services/ingestion/src/ingestion/: __init__.py  mathocr.py  pipeline.py  schema.py
services/rag-api/: pyproject.toml
services/rag-api/src/rag_api/: __init__.py  db.py  embeddings.py  index_seed.py  main.py  models.py  search.py
services/scraper/: pyproject.toml  sources.yaml
services/scraper/src/scraper/: __init__.py  base.py
services/scraper/src/scraper/connectors/: __init__.py  ib_aggregator.py  openstax.py
