[project]
name = "ice-school-rag-api"
version = "0.1.0"
description = "Ice School · API de recuperación (RAG) que los tutores IA usan como herramienta"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "asyncpg>=0.29",        # Postgres + pgvector
    "httpx>=0.27",          # cliente de embeddings (Voyage/OpenAI)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_api"]
